add state_update() in ur_ctl.py

--- a/Openvla_cap/requirements.txt
+++ b/Openvla_cap/requirements.txt
@@ -1,7 +1,8 @@
-numpy
+numpy==1.26.4
 opencv-python
 pyrealsense2
-scipy
-rtde_control
-rtde_receive
-
+FuzzyTM>=0.4.0
+scipy=1.11.4
+ur_rtde
+pymodbus
+spnav
